# fourc-qpid-manager

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  version.cmake  version.h.in
cmake/: ProjectConfig.cmake.in  ProjectConfigVersion.cmake.in  install_targets.cmake
doc/: CMakeLists.txt  Doxyfile.in  sample_responses
examples/: Bindings.cxx  CMakeLists.txt
include/fourc/fmf/: Acl.h  Binding.h  Bridge.h  Broker.h  BrokerAgent.h  BrokerAgentException.h  BrokerAgentTemplate.h  BrokerObject.h  Cluster.h  Connection.h  Exchange.h  ExchangeTypeDesc.h  HaBroker.h  Link.h  LogLevel.h  Memory.h  MethodResult.h  ObjectId.h  Queue.h  RPCException.h  Route.h  RouteManager.h  SchemaId.h  Session.h  Subscription.h
include/fourc/fmf/codec/: AclDecoder.h  AclLookupDecoder.h  BindingDecoder.h  BridgeDecoder.h  BrokerDecoder.h  ClusterDecoder.h  ConnectionDecoder.h  DecodeException.h  Decoder.h  DecoderTraits.h  EchoDecoder.h  ExceptionDecoder.h  ExchangeDecoder.h  HaBrokerDecoder.h  LinkDecoder.h  LogLevelDecoder.h  MemoryDecoder.h  MethodResultDecoder.h  QueueDecoder.h  ResponseDecoder.h  ResponsePropertyNames.h  SessionDecoder.h  SubscriptionDecoder.h  TrivialDecoder.h  ValueReader.h
src/fourc/fmf/: Acl.cxx  Binding.cxx  Bridge.cxx  Broker.cxx  BrokerAgentException.cxx  BrokerObject.cxx  Cluster.cxx  Connection.cxx  Exchange.cxx  ExchangeTypeDesc.cxx  HaBroker.cxx  Link.cxx  LogLevel.cxx  Memory.cxx  MethodResult.cxx  ObjectId.cxx  Queue.cxx  RPCException.cxx  Route.cxx  RouteManager.cxx  SchemaId.cxx  Session.cxx  Subscription.cxx
src/fourc/fmf/codec/: DecodeException.cxx  ResponsePropertyNames.cxx
tests/: CMakeLists.txt
tests/gmock/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/systemtests/: CMakeLists.txt  LocalHostAddress.h  SystemTestConfiguration.cxx  SystemTestConfiguration.h  SystemTestConstants.h  main.cxx
tests/systemtests/scripts/: bash-system-tests
tests/systemtests/scripts/shell2junit/: sh2ju
tests/systemtests/tests/: AclTestsIT.cxx  BindingTestsIT.cxx  BridgeTestsIT.cxx  BrokerAgentTests.cxx  BrokerTestsIT.cxx  ClusterTestsIT.cxx  ConnectionTestsIT.cxx  ExchangeTestsIT.cxx  HaBrokerTestsIT.cxx  LinkTestsIT.cxx  MemoryTestsIT.cxx  QueueTestsIT.cxx  RouteManagerTestsIT.cxx  SessionTestsIT.cxx  SubscriptionTestsIT.cxx
tests/unittests/: CMakeLists.txt  MockDefaultValueHandler.h  SubsystemTypeSpecialisations.h  main.cxx
tests/unittests/fourc/fmf/: AclTests.cxx  BindingTests.cxx  BridgeTests.cxx  BrokerAgentExceptionTests.cxx  BrokerAgentTests.cxx  BrokerObjectTests.cxx  BrokerTests.cxx  ClusterTests.cxx  ConnectionTests.cxx  ExchangeTests.cxx  ExchangeTypeDescTests.cxx  HaBrokerTests.cxx  LinkTests.cxx  MemoryTests.cxx  ObjectIdTests.cxx  QueueTests.cxx  RPCExceptionTests.cxx  SchemaIdTests.cxx  SessionTests.cxx  SubscriptionTests.cxx
tests/unittests/fourc/fmf/codec/: AclDecoderTests.cxx  BindingDecoderTests.cxx  BridgeDecoderTests.cxx  BrokerDecoderTests.cxx  ConnectionDecoderTests.cxx  DecodeExceptionTests.cxx  DecoderTests.cxx  ExchangeDecoderTests.cxx  LinkDecoderTests.cxx  MemoryDecoderTests.cxx  QueueDecoderTests.cxx  ResponseDecoderTests.cxx  SessionDecoderTests.cxx  SubscriptionDecoderTests.cxx  ValueReaderTests.cxx
tests/unittests/subsystem/mocks/: Address.h  Connection.h  Duration.h  Message.h  Receiver.h  Sender.h  Session.h  Uuid.h  Variant.h
